Corrige rutas del CSS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>CULTURA DIGITAL</title>
 
     <!-- Enlaces a archivos de estilos CSS van aquí -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
+
     <script>
         function toggleDropdown() {
             var dropdownContent = document.getElementById("dropdownContent");
